--- a/application/index/view/display/display.html
+++ b/application/index/view/display/display.html
@@ -46,10 +46,10 @@
 
 
             <button type="submit" class="layui-btn" lay-submit="" lay-filter="im_get"
-                >下载多次重复im</button>
-            <button type="submit" class="layui-btn" lay-submit="" lay-filter="oa_get">下载多次重复oa</button>
+                >下载多次重复点数1</button>
+            <button type="submit" class="layui-btn" lay-submit="" lay-filter="oa_get">下载多次重复点数2</button>
             <button type="submit" class="layui-btn" lay-submit="" lay-filter="idfa_get"
-                style="margin-right: 15px;">下载多次重复idfa</button>
+                style="margin-right: 15px;">下载多次重复点数3</button>
 
             <select id="echart" name="echart" lay-filter="echart">
                 <option value=""></option>
