--- a/application/index/view/display/display.html
+++ b/application/index/view/display/display.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Expires" content="0">
-    <title>数据展示</title>
+    <title>图展示</title>
     <link rel="stylesheet" href="/static/css/layui/layui.css">
     <script src="/static/js/layui/layui.js"></script>
     <script src="/static/js/axios.min.js"></script>
