--- a/application/index/view/display/display_data1.html
+++ b/application/index/view/display/display_data1.html
@@ -99,3 +99,11 @@
     <span>0</span>
     {{# } }}
 </script>
+<script type="text/html" id="mac">
+    {{# if(d.mac){ }}
+    <span>{{d.mac}}</span>
+    <a class="layui-btn layui-btn-xs" lay-event="mac">创建下载</a>
+    {{#  } else { }}
+    <span>0</span>
+    {{# } }}
+</script>
