--- a/application/index/view/display/display_data.html
+++ b/application/index/view/display/display_data.html
@@ -50,6 +50,8 @@
             <button type="submit" class="layui-btn" lay-submit="" lay-filter="oa_get">下载多次重复点数2</button>
             <button type="submit" class="layui-btn" lay-submit="" lay-filter="idfa_get"
                 style="margin-right: 15px;">下载多次重复点数3</button>
+             <button type="submit" class="layui-btn" lay-submit="" lay-filter="mac_get"
+                style="margin-right: 15px;">下载多次重复点数4</button>
         </div>
     </form>
 
